// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table 1`] = `
<table
  className="table"
  data-table-padded={true}
>
  <tbody
    data-table-striped={true}
  />
</table>
`;

exports[`should render a table without padding 1`] = `
<table
  className="table"
  data-table-padded={false}
>
  <tbody
    data-table-striped={true}
  />
</table>
`;

exports[`should render a table without zebra stripes 1`] = `
<table
  className="table"
  data-table-padded={true}
>
  <tbody
    data-table-striped={false}
  />
</table>
`;
